feat: init detect change project

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ INPUT_APPS=apps
 INPUT_DEPENDENCIES=libs packages
 INPUT_WORKSPACEPATH=./examples
 INPUT_CHANGEFILES=.github/workflows apps/socket
+INPUT_INCLUDEPACKAGE=all
