feat: init detect change project

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 INPUT_APPS=apps
 INPUT_DEPENDENCIES=libs packages
 INPUT_WORKSPACEPATH=./examples
-INPUT_CHANGEFILES=.github/workflows apps/socket
-INPUT_INCLUDEPACKAGE=all
+INPUT_CHANGEFILES=.github/workflows examples/libs/lib1
+INPUT_INCLUDEPACKAGE=
+INPUT_YAMLCONFIG=./examples/service.yaml
+INPUT_CURRENTBRANCH=develop
