--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "private": true,
   "dependencies": {
-    "@actions/core": "^1.11.1"
+    "@actions/core": "^1.11.1",
+    "yaml": "^2.6.1"
   },
   "devDependencies": {
     "@github/local-action": "^2.2.0",
